--- a/15-Dark-Parameter-Positioning.Rmd
+++ b/15-Dark-Parameter-Positioning.Rmd
@@ -33,6 +33,52 @@ The Look Ahead feature is used for automatic pre-positioning of selected paramet
     
 5.   If Look Ahead is globally turned off it may still be enabled on a per Qlist basis in the Qlist Properties pop-up.
 
+>Look Ahead status for individual controllers may be viewed in the controller's Qlist Properties.
+
+
+**Create the Look Ahead Mask:**
+
+1.  Select the fixtures to be in the Mask.
+    
+2.  Optionally select the parameters to be included in the Mask - If no parameters are selected, all parameters will be included.
+    
+3.  Tap {LOOK AHEAD MASK} on the Editor Toolbar.
+    
+4.  Press [STORE].
+    
+
+**Delete the Look Ahead Mask:**
+
+1.  Select the fixtures to be deleted from the Mask.
+    
+2.  Tap {LOOK AHEAD MASK} on the Editor Toolbar.
+    
+3.   Press [DELETE].
+    
+
+A Look Ahead cue is a cue that automatically pre-positions parameters when the dimmer is off. Currently only time can be set for a Look Ahead cue. **Set individual Look Ahead Time -** Speed at which fixtures move in dark.
+
+1.  CUE] [#] [Time] - The Time pop-up will open.
+    
+2.  Tap {Look Ahead} - The indicator will turn green and Look Ahead will appear over the virtual time wheel.
+    
+3.  Set the time value using the virtual wheel or type the value directly on the keypad.
+    
+4.  Press [Enter] or tap <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/> to close the pop-up and store the Look Ahead time.
+    
+
+>Look Ahead time can also be changed using the [CUE ] [#] [SETTINGS] command. Default Look Ahead time can be set in System Settings/Defaults/Cue Settings.
+
+**Enable or Disable Look Ahead on individual controllers:**
+
+1.  Press [SETTINGS] [HERE] to any controller button of the controller you wish to enable or disable Look Ahead on - The Settings pop-up will open.
+    
+2.  Tap the {Qlist properties} tab - The Qlist Properties pop-up will open.
+    
+3.  Toggle Look Ahead on or off.
+    
+4.  Press [Enter] or tap <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/> to close the pop-up.
+
 
 
 ## Look Ahead Cue (Mark)
